@@ -9,6 +9,8 @@ This file documents the revision history for UFL::Phonebook.
           namespaces
         - Rename Model::Organization to Model::Unit to match the rest
           of the application
+        - Refactor UFL::Phonebook::Entry to use newer style
+          Catalyst::Model::LDAP
 
 0.19  Tue Nov 28 16:00:51 EST 2006
         - Cleanup {encode,decode}_ufid
